# sdk-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/scripts/: check_snippet_drift.py
.github/workflows/: ci.yml  publish.yml  snippet-drift.yml
src/fixyourdocs/: __init__.py  _cli.py  _http.py  _init.py  _results.py  client.py  errors.py  models.py  snippet.py
tests/: test_async_client.py  test_cli.py  test_client.py  test_init.py  test_models.py  test_smoke.py
