[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fixyourdocs"
version = "0.0.0"
description = "Reference Python SDK for the Docs Feedback Protocol"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "FixYourDocs", email = "hello@fixyourdocs.org" }]
keywords = ["docs", "documentation", "agents", "ai", "feedback", "protocol"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Documentation",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://docsfeedback.org"
Repository = "https://github.com/fixyourdocs/sdk-python"
Specification = "https://github.com/fixyourdocs/protocol"

[tool.hatch.build.targets.wheel]
packages = ["src/fixyourdocs"]
